--- a/force-app/main/default/lwc/tester/tester.html
+++ b/force-app/main/default/lwc/tester/tester.html
@@ -1,4 +1,10 @@
 <template>
     Hello, {greeting}!
+
+    <div class="slds-var-m-around_medium">
+        <template for:each={contacts.data} for:item="contact">
+            <p key={contact.Id}>{contact.Name}</p>
+        </template>
+    </div>
     
 </template>
